[package]
description = "Created with Anchor"
edition = "2021"
name = "credi"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "credi"

[features]
anchor-debug = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-log-ix-name = []

custom-heap = []
custom-panic = []
no-idl = []

[dependencies]
anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.31.0"}
# spl-token-2022 = "9.0.0"
